--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# DATA
+code/data/param/
+code/data/sensor_data/
+code/data/stereo_images/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
